syntax = "proto3";

package brms.entity;

option java_multiple_files = true;
option java_package = "com.pdd.yo2.brms.infrastructure.api.grpc.dto";

message RemittanceRequest {
  string transaction_id = 1;
  string customer_id = 2;
  string customer_name = 3;
  string country_of_origin = 4;
  string beneficiary_id = 5;
  string beneficiary_name = 6;
  string beneficiary_country = 7;
  double transaction_amount = 8;
  string currency = 9;
}

message RemittanceResponse {
  string transaction_id = 1;
  TransactionStatus transaction_status = 2;
  string status_message = 3;
}

enum TransactionStatus {
  UNKNOWN = 0;
  FAILED = 1;
  SUCCESS = 2;
  PENDING = 3;
  REJECTED = 4;
  ERROR = 5;
}

service RemittanceService {
  rpc doRemittance(RemittanceRequest) returns (RemittanceResponse);
}